[package]
name = "microphone-mute-indicator"
version = "0.2.2"
edition = "2021"
build = "build.rs"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "implement",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
